[package]
name = "tetris"
version = "0.1.0"
authors = ["zendurix <mich111222333@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sfml = "0.15.1" # 2d graphics, window and input
# sfml bindings from rust taken from: https://github.com/jeremyletang/rust-sfml
rand = "0.7.3"

